--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+charset-normalizer==3.4.4
 contourpy==1.3.3
 control==0.10.2
 cycler==0.12.1
@@ -10,5 +11,6 @@ pillow==12.0.0
 pygame==2.6.1
 pyparsing==3.2.5
 python-dateutil==2.9.0.post0
+reportlab==4.4.6
 scipy==1.16.3
 six==1.17.0
